--- a/app/src/main/res/layout/frag_history.xml
+++ b/app/src/main/res/layout/frag_history.xml
@@ -1,17 +1,137 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+<androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:background="#EEEDEC">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="History Fragment"
+
+    <androidx.core.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:fillViewport="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent">
 
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
+            android:background="@drawable/background_round"
+            android:backgroundTint="@color/white">
+
+            <TextView
+                android:id="@+id/tv_profile"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text="PROFILE"
+                android:textAppearance="@style/Text.Medium_20_White"
+                android:textColor="@color/main"
+                android:textSize="16sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+
+            <ImageView
+                android:id="@+id/img_history_bottom"
+                android:layout_width="12dp"
+                android:layout_height="17dp"
+                android:layout_marginEnd="63dp"
+                app:layout_constraintBottom_toBottomOf="@+id/my_lunch"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:srcCompat="@drawable/history_bottom"
+                app:tint="@color/main" />
+
+            <TextView
+                android:id="@+id/tv_history"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="23dp"
+                android:text="HISTORY"
+                android:textAppearance="@style/Text.Medium_20_White"
+                android:textColor="@color/main"
+                android:textSize="16sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/layout_profile" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rv_list"
+                android:layout_width="409dp"
+                android:layout_height="555dp"
+                android:layout_marginStart="35dp"
+                android:layout_marginTop="26dp"
+                android:layout_marginEnd="35dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/img_history_bottom" />
+
+            <ImageView
+                android:id="@+id/img_history_top"
+                android:layout_width="12dp"
+                android:layout_height="17dp"
+                android:layout_marginStart="63dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/my_lunch"
+                app:srcCompat="@drawable/history_top"
+                app:tint="@color/main" />
+
+            <TextView
+                android:id="@+id/my_lunch"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="50dp"
+                android:layout_marginTop="25dp"
+                android:layout_marginEnd="48dp"
+                android:fontFamily="@font/notosans_kr_bold"
+                android:text="내 점심 기록 목록"
+                android:textColor="@color/main"
+                android:textSize="23sp"
+                app:layout_constraintEnd_toStartOf="@+id/img_history_bottom"
+                app:layout_constraintStart_toEndOf="@+id/img_history_top"
+                app:layout_constraintTop_toBottomOf="@+id/tv_history" />
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/layout_profile"
+                android:layout_width="100dp"
+                android:layout_height="98dp"
+                android:layout_marginStart="24dp"
+                android:layout_marginTop="20dp"
+                android:background="@drawable/background_round"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tv_profile">
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <TextView
+                android:id="@+id/tv_nickname_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="9dp"
+                android:text="닉네임"
+                android:textColor="@color/black"
+                app:layout_constraintStart_toEndOf="@+id/layout_profile"
+                app:layout_constraintTop_toTopOf="@+id/layout_profile" />
+
+            <TextView
+                android:id="@+id/tv_nickname"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:text="SHELLY"
+                android:textColor="@color/black"
+                android:textSize="18sp"
+                app:layout_constraintStart_toStartOf="@+id/tv_nickname_title"
+                app:layout_constraintTop_toBottomOf="@+id/tv_nickname_title" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.core.widget.NestedScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
