synchronize : mapFragment 구현 및 네트워킹설정

--- a/app/src/main/res/layout/item_map_category.xml
+++ b/app/src/main/res/layout/item_map_category.xml
@@ -13,6 +13,7 @@
             android:paddingHorizontal="20dp"
             android:paddingVertical="10dp"
             android:textColor="@color/white"
+            android:fontFamily="@font/app_font"
             android:text="카테고리 이름" />
 
     </LinearLayout>
