--- a/app/src/main/res/layout/frag_map.xml
+++ b/app/src/main/res/layout/frag_map.xml
@@ -13,6 +13,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="MAP"
+            android:fontFamily="@font/app_font"
             android:layout_marginTop="20dp"
             android:textAlignment="center"
             app:layout_constraintStart_toStartOf="parent"
@@ -24,27 +25,49 @@
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/category_rv"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
             android:orientation="horizontal"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/title_tv"
-            tools:listitem="@layout/item_map_category" />
+            app:layout_constraintTop_toBottomOf="@id/title_tv" />
 
-
-        <net.daum.mf.map.api.MapView xmlns:android="http://schemas.android.com/apk/res/android"
+        <RelativeLayout android:id="@+id/map_view_container"
+            xmlns:android="http://schemas.android.com/apk/res/android"
             android:orientation="vertical"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingTop="130dp"
+            android:paddingBottom="50dp"
+            android:paddingHorizontal="40dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/category_rv"
             app:layout_constraintBottom_toBottomOf="parent">
 
-        </net.daum.mf.map.api.MapView>
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:elevation="10dp"
+                app:cardCornerRadius="20dp">
+
+                <RelativeLayout
+                    android:id="@+id/map_view"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" />
+            </androidx.cardview.widget.CardView>
+        </RelativeLayout>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="70dp"
+            android:layout_marginHorizontal="50dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent">
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
