--- a/app/src/main/res/layout/frag_map.xml
+++ b/app/src/main/res/layout/frag_map.xml
@@ -6,7 +6,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/main">
+        android:background="#EEEDEC">
 
         <TextView
             android:id="@+id/title_tv"
@@ -19,7 +19,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:textColor="@color/white"
+            android:textColor="@color/main"
             android:textStyle="bold"
             android:textSize="16sp" />
 
@@ -28,9 +28,37 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
+            android:layout_marginHorizontal="40dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/title_tv" />
+
+        <!--        <LinearLayout-->
+        <!--            android:layout_width="match_parent"-->
+        <!--            android:layout_height="wrap_content"-->
+        <!--            app:layout_constraintStart_toStartOf="parent"-->
+        <!--            app:layout_constraintEnd_toEndOf="parent"-->
+        <!--            android:layout_marginHorizontal="40dp"-->
+        <!--            android:padding="5dp"-->
+        <!--            app:layout_constraintTop_toBottomOf="@+id/category_rv">-->
+
+        <!--            <ImageView-->
+        <!--                android:layout_width="wrap_content"-->
+        <!--                android:layout_height="wrap_content"-->
+        <!--                android:rotation="180"-->
+        <!--                android:layout_marginEnd="10dp"-->
+        <!--                android:background="@drawable/ic_baseline_arrow_back_ios_new_24"-->
+        <!--                android:backgroundTint="@color/main" />-->
+
+        <!--            <TextView-->
+        <!--                android:layout_width="match_parent"-->
+        <!--                android:layout_height="wrap_content"-->
+        <!--                android:layout_marginHorizontal="40dp"-->
+        <!--                android:textStyle="bold"-->
+        <!--                android:textSize="14sp"-->
+        <!--                android:text="돈까쓰" />-->
+
+        <!--        </LinearLayout>-->
 
         <RelativeLayout android:id="@+id/map_view_container"
             xmlns:android="http://schemas.android.com/apk/res/android"
@@ -56,17 +84,6 @@
                     android:layout_height="match_parent" />
             </androidx.cardview.widget.CardView>
         </RelativeLayout>
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="70dp"
-            android:layout_marginHorizontal="50dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent">
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
