--- a/app/src/main/res/layout/item_map_category.xml
+++ b/app/src/main/res/layout/item_map_category.xml
@@ -12,8 +12,9 @@
             android:textSize="14sp"
             android:paddingHorizontal="20dp"
             android:paddingVertical="10dp"
-            android:textColor="@color/white"
+            android:textColor="#AFAFAF"
             android:fontFamily="@font/app_font"
+            android:textStyle="bold"
             android:text="카테고리 이름" />
 
     </LinearLayout>
