--- a/app/src/main/res/layout/frag_home.xml
+++ b/app/src/main/res/layout/frag_home.xml
@@ -7,17 +7,23 @@
         android:layout_height="match_parent"
         android:background="@color/background">
 
-        <include
-            android:id="@+id/view_top"
-            layout="@layout/view_toplayout" />
-
+        <TextView
+            android:id="@+id/tv_top"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginTop="10dp"
+            android:text="@string/home"
+            android:textAppearance="@style/Text.Bold_16_Main"/>
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/view_top"
+            app:layout_constraintTop_toBottomOf="@id/tv_top"
             android:visibility="visible">
 
             <androidx.constraintlayout.widget.ConstraintLayout
@@ -79,7 +85,7 @@
             android:layout_height="match_parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/view_top"
+            app:layout_constraintTop_toBottomOf="@id/tv_top"
             app:layout_constraintBottom_toBottomOf="parent"
             android:visibility="gone">
             <TextView
