--- a/app/src/main/res/layout/frag_groupcode.xml
+++ b/app/src/main/res/layout/frag_groupcode.xml
@@ -152,6 +152,6 @@
             android:background="@drawable/view_round_15_main"
             android:layout_marginTop="40dp"
             android:text="@string/string_confirm"
-            android:textAppearance="@style/Text.Bold_16_Main"
+            android:textAppearance="@style/Text.Bold_16_Main"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
