--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -11,7 +11,19 @@
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor">@color/background</item>
+        <item name="android:windowLightStatusBar" tools:targetApi="m">?attr/background</item>
         <!-- Customize your theme here. -->
+    </style>
+
+    <!-- Splash Theme -->
+    <style name="Theme.Splash" parent="Theme.AppCompat.NoActionBar">
+
+        <!-- Status bar color. -->
+        <item name="android:statusBarColor" tools:targetApi="l">?attr/background</item>
+        <item name="android:windowLightStatusBar" tools:targetApi="m">?attr/background</item>
+        <!-- Background color. -->
+        <item name="background">@color/splash_background</item>
+        <item name="android:windowBackground">@color/splash_background</item>
     </style>
 
     <!-- Font Style -->
