--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,6 +15,7 @@
     <color name="background">#EEEDEC</color>
     <color name="background_dark">#E4E4E4</color>
     <color name="splash_background">#FEA53D</color>
+    <color name="green">#00ff00</color>
 
 
     <!-- 폰트 컬러 (블랙) -->view_round_main.xml
