feat : 플로우 작성

--- a/app/src/main/res/layout/frag_creategroup.xml
+++ b/app/src/main/res/layout/frag_creategroup.xml
@@ -66,6 +66,7 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/create_new_group_bt"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="26dp"
