--- a/app/src/main/res/layout/item_vote_category.xml
+++ b/app/src/main/res/layout/item_vote_category.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingBottom="30dp">
+    android:paddingBottom="30dp"
+    android:splitMotionEvents="false">
 
     <ImageView
         android:id="@+id/view2"
