--- a/app/src/main/res/layout/frag_groupcode.xml
+++ b/app/src/main/res/layout/frag_groupcode.xml
@@ -65,6 +65,7 @@
                     app:layout_constraintTop_toTopOf="parent">
 
                     <TextView
+                        android:id="@+id/number1_tv"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
@@ -88,6 +89,7 @@
 
                     <TextView
                         android:layout_width="wrap_content"
+                        android:id="@+id/number2_tv"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:text="1"
@@ -112,6 +114,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
+                        android:id="@+id/number3_tv"
                         android:text="1"
                         android:textColor="@color/font_black"
                         android:textSize="32sp"
@@ -134,6 +137,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
+                        android:id="@+id/number4_tv"
                         android:text="1"
                         android:textColor="@color/font_black"
                         android:textSize="32sp"
