--- a/app/src/main/res/layout/frag_home.xml
+++ b/app/src/main/res/layout/frag_home.xml
@@ -16,7 +16,8 @@
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginTop="10dp"
             android:text="@string/home"
-            android:textAppearance="@style/Text.Bold_16_Main"/>
+            android:textAppearance="@style/Text.Bold_16_Main" />
+
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/group_info_layout"
             android:layout_width="match_parent"
@@ -142,6 +143,7 @@
             android:visibility="gone">
 
             <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/group_rv"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 tools:listitem="@layout/item_group_info" />
