--- a/app/src/main/res/layout/item_group_info.xml
+++ b/app/src/main/res/layout/item_group_info.xml
@@ -17,6 +17,7 @@
         android:orientation="vertical">
 
         <TextView
+            android:id="@+id/team_name_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="14sp"
@@ -24,6 +25,7 @@
 
         <TextView
             android:layout_marginTop="10dp"
+            android:id="@+id/team_number_tv"
             android:layout_width="wrap_content"
             android:textSize="14sp"
             android:layout_height="wrap_content"
