--- a/app/src/main/res/layout/item_member.xml
+++ b/app/src/main/res/layout/item_member.xml
@@ -19,6 +19,7 @@
     </androidx.cardview.widget.CardView>
 
     <TextView
+        android:id="@+id/name_tv"
         android:layout_marginStart="20dp"
         android:layout_width="wrap_content"
         android:layout_gravity="center"
